Se eliminaron los comentarios y se le agregaron 2 lineas nuevas de codigo

--- a/pagina4/pagina4.html
+++ b/pagina4/pagina4.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,7 +13,7 @@
     <header>SAB FERRETERIA</header>
     <nav>
         <a href="../index.html">Registrar productos</a>
-        <a href="../pagina4/pagina2.html">Indicaciones</a>
+        <a href="../pagina2/pagina2.html">Indicaciones</a>
         <a href="../pagina3/pagina3.html">Vista de producto</a>
         <a href="">Buscar productos</a>
     </nav>
